[gd_scene load_steps=7 format=3 uid="uid://nomr1bmn73r7"]

[ext_resource type="Script" uid="uid://ctd57l8gio24y" path="res://victory.gd" id="1_7bnjr"]
[ext_resource type="FontFile" uid="uid://cckircs02opgx" path="res://assets/fonts/Exo2-SemiBold.ttf" id="2_v31sk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v31sk"]
bg_color = Color(0.117647, 0.105882, 0.0980392, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 0.501961)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.4)
shadow_size = 24
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qr7ta"]
bg_color = Color(0.290196, 0.172549, 0.0784314, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 0.501961)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v3ap6"]
bg_color = Color(0.172549, 0.105882, 0.054902, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 0.501961)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e8xaq"]
bg_color = Color(0.235294, 0.137255, 0.0705882, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 0.501961)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="Victory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7bnjr")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0.0745098, 0.705882)

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(650, 450)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -331.5
offset_top = -229.5
offset_right = 331.5
offset_bottom = 229.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v31sk")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 13.0
offset_right = -29.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Label_Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.909804, 0.690196, 1)
theme_override_fonts/font = ExtResource("2_v31sk")
theme_override_font_sizes/font_size = 50
text = "CLASSIC MODE CLEARED!"

[node name="Label_Stats" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.909804, 0.690196, 1)
theme_override_font_sizes/font_size = 35
text = "  sfa"

[node name="Label_Upgrades" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.909804, 0.690196, 1)
theme_override_font_sizes/font_size = 35
text = "  asf"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 40

[node name="Btn_Menu" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(90, 75)
layout_mode = 2
theme_override_colors/font_color = Color(0.968627, 0.901961, 0.788235, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_qr7ta")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v3ap6")
theme_override_styles/normal = SubResource("StyleBoxFlat_e8xaq")
text = " Main Menu "

[node name="Btn_NewRun" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(90, 75)
layout_mode = 2
theme_override_colors/font_color = Color(0.968627, 0.901961, 0.788235, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_qr7ta")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v3ap6")
theme_override_styles/normal = SubResource("StyleBoxFlat_e8xaq")
text = " New Run "
